--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,16 @@
+.colorreference {
+    color: #a9071e #7851a9 #1034a6 #0087bd #ffd300;
+    border-color: #aad1d8 #a0d36e #facb47 #fdfae1;
+}
+
 * {
     margin: 0;
     padding: 0;
 }
 
 html {
-    font-size: 1.5vw;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', sans-serif;
+    line-height: 1em;
 }
 
 * {
@@ -14,42 +19,44 @@ html {
     line-height: 1em;
 }
 
-p {
-    font-size: 1rem;
-}
-
-h6 {
-    font-size: 1.2rem;
-}
-
-h5 {
-    font-size: 1.4rem;
-}
-
-h4 {
-    font-size: 1.6rem;
-}
-
-h3 {
-    font-size: 1.8rem;
+h1 {
+    font-size: 3vw;
 }
 
 h2 {
-    font-size: 2rem;
+    font-size: 2.8vw;
 }
 
-h1 {
-    font-size: 2.2rem;
+h3 {
+    line-height: 1.1em;
+    width: 100%;
+    text-align: center;
+    padding: 0.5em 0;
+    font-size: 40px;
+    color: orange;
+    text-transform: uppercase;
+    font-weight: 700;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h4, legend {
+    font-size: 34px;
+}
+
+h5 {
+    font-size: 32;
+}
+
+h6 {
+    font-size: 24;
+}
+
+h1, h2, h3, h4, legend, h5, h6 {
     font-family: Georgia, serif;
 }
 
-.colorreference {
-    color: #a9071e #7851a9 #1034a6 #0087bd #ffd300;
-    border-color: #aad1d8 #a0d36e #facb47 #fdfae1;
-    color: whitesmoke;
+p, td, a, i, fieldset, li {
+    font-size: 20px;
+    line-height: 1.05em;
 }
 
 div {
@@ -66,23 +73,15 @@ img {
 
 a:hover {
     text-decoration: none;
-    font-size: 1.1em;
-    font-style: bold;
-    padding: 0 0.3em 0.15em;
-    background-color: #fff;
-    border: #fff 3px outset;
-    border-radius: 5px;
-    line-height: 1em;
-    box-shadow: 0 0 5px 1px #3f3f3f;
-    
 }
 
 .container {
     margin: 0 auto 5vw;
-    background-color: honeydew;
+    padding: 2vw 5vw;
+    background-color: #fdfae1;
 }
 
-#about {
+/* #about {
     background-color: #fdfae1;
 }
 
@@ -100,12 +99,727 @@ a:hover {
 
 #education {
     background-color: #fdfae1;
+} */
+
+/* menu */
+
+#home .dropdown {
+    position: fixed;
+    top: 0.5vw;
+    left: 1%;
+    z-index: 99;
 }
 
-@media screen and(max-width:1200px) {}
+.dropdown .btn {
+    background-color: rgb(250, 250, 250, 0);
+    color: #1034a6;
+    border: none;
+    font-size: 30px;
+}
 
-@media screen and(max-width:992px) {}
+.dropdown-menu {
+    background-color: rgba(255, 255, 255, 0.8);
+}
 
-@media screen and(max-width:768px) {}
+.dropdown-menu span {
+    color: #1034a6;
+    font-size: 20px;
+}
 
-@media screen and(max-width:576px) {}
+.dropdown-menu .fa {
+    width: 20px;
+    color: #1034a6;
+    text-align: center;
+}
+
+.dropdown-menu a:hover i {
+    background-color: #1034a6;
+    color: #fff;
+}
+
+/* topbar */
+
+.topbar {
+    width: 95%;
+    position: absolute;
+    top: 2vw;
+    right: 0;
+    text-align: right;
+}
+
+.topbar a {
+    font-size: 2vw;
+    margin-right: 3%;
+    padding: 0 1vw 0 0;
+    color: #1034a6;
+    border-radius: 3px;
+}
+
+.topbar a:hover {
+    background-color: #1034a6;
+    color: #fff;
+}
+
+/* banner */
+
+.banner {
+    background: url("../img/banner1.jpg") no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 51vw;
+    margin: 0 auto;
+    width: 100%;
+}
+
+h1 {
+    color: orange;
+    font-size: 4.5vw;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-shadow: 2px 2px 2px rgba(16, 16, 16, 0.8);
+    letter-spacing: 0.2vw;
+    text-align: center;
+    position: relative;
+    top: 15%;
+}
+
+h2 {
+    color: #000;
+    white-space: nowrap;
+    font-size: 3vw;
+    text-align: center;
+    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8);
+    text-align: right;
+    position: relative;
+    top: 15vw;
+    right: 8%;
+}
+
+/* drop words */
+
+.banner>.drop-words {
+    font-size: 9vw;
+    position: absolute;
+    top: 20vw;
+    left: 50%;
+    margin-left: -10vw;
+}
+
+.drop-words pre {
+    position: absolute;
+    opacity: 0;
+    color: #555;
+    animation: vanish 18s linear infinite 0s;
+    line-height: 1.5em;
+}
+
+.drop-words pre:nth-child(2) {
+    animation-delay: 3s;
+}
+
+.drop-words pre:nth-child(3) {
+    animation-delay: 6s;
+}
+
+.drop-words pre:nth-child(4) {
+    animation-delay: 9s;
+}
+
+.drop-words pre:nth-child(5) {
+    animation-delay: 12s;
+}
+
+.drop-words pre:nth-child(6) {
+    animation-delay: 15s;
+}
+
+.social {
+    padding: 0;
+    list-style: none;
+    display: inline-block;
+    margin: 1em 0 0;
+    position: relative;
+    left: 10%;
+    top: 20px;
+}
+
+.social li {
+    display: inline-block;
+    margin: 0 6px;
+}
+
+/* social */
+
+.social {
+    padding: 0;
+    list-style: none;
+    display: inline-block;
+    margin: 1em 0 0;
+    position: relative;
+    left: 10%;
+    top: 20px;
+}
+
+.social li {
+    display: inline-block;
+    margin: 0 6px;
+}
+
+/* 3d */
+
+#social>li div.front, #social>li div.back {
+    border-radius: 0;
+}
+
+.social a {
+    display: inline-block;
+    float: none;
+    width: 35px;
+    height: 35px;
+    text-decoration: none;
+    cursor: pointer;
+    text-align: center;
+    transition: 0.5s;
+    transform-style: preserve-3d;
+    font-size: 25px;
+}
+
+.social .front, .social .back {
+    width: 35px;
+    height: 35px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateZ(18px);
+    backface-visibility: visible;
+}
+
+#social i {
+    margin-top: 0.2em;
+}
+
+.social .front {
+    color: #fff;
+}
+
+.social .back {
+    color: #212121;
+}
+
+.social .back {
+    transform: rotateX(90deg) translateZ(18px);
+    backface-visibility: hidden;
+}
+
+a.github .front {
+    background: #00cc11;
+}
+
+a.linkedin .front {
+    background: #3b5998;
+}
+
+.github .back, .linkedin .back {
+    background: #fff;
+}
+
+.social a:hover {
+    transform: rotateX(-90deg);
+}
+
+.social a:hover .back {
+    backface-visibility: visible;
+}
+
+/* about */
+
+.carousel-inner {
+    padding-top: 2vw;
+}
+
+.aboutleft img {
+    box-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.6);
+    margin-top: 10%;
+}
+
+img {
+    height: 25vw;
+    width: 25vw;
+    max-height: 250px;
+    max-width: 250px;
+    border-radius: 20px;
+}
+
+#about .carousel-inner {
+    border-radius: 0;
+}
+
+/* #about slide */
+
+td {
+    line-height: 1.2em;
+}
+
+.about-info tr:first-child td {
+    text-align: center;
+}
+
+.about-info tr:last-child a {
+    color: #fff;
+}
+
+.about-info tr a:hover {
+    color: #ff9900;
+}
+
+.about-info td {
+    width: 30%;
+    text-align: left;
+    padding: 0 4%;
+}
+
+.about-info td:first-child {
+    width: 10%;
+}
+
+#about .carousel-item p {
+    border-bottom: #2f2f2f 1px dotted;
+}
+
+.about-info tr:last-child td {
+    text-align: center;
+}
+
+.about-info tr:last-child td a {
+    padding: 0.5vw;
+    background-color: #1034a6;
+    border-radius: 5px;
+}
+
+.about-slide .carousel-inner a:hover {
+    color: #ff9900;
+}
+
+.aboutright, #about-slide>div {
+    height: 350px;
+}
+
+.aboutleft {
+    background: #fff url("../img/about.png") no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 60%;
+    padding: 10vw 5vw;
+    max-width: 500px;
+    height:100px;
+}
+
+.aboutright {
+    padding-bottom: 0.5em;
+    width: 90%;
+    padding: auto 1em;
+}
+
+.carousel.slide:hover>.carousel-control-prev span, .carousel.slide:hover>.carousel-control-next span {
+    background-color: #000;
+}
+
+/* gallery */
+
+/* flip the pane when hovered */
+
+.card-container:not(.manual-flip):hover .card, .card-container.hover.manual-flip .card {
+    transform: rotateY( 180deg);
+}
+
+.card-container.static:hover .card, .card-container.static.hover .card {
+    transform: none;
+}
+
+.card-container, .card, .front, .back, .cardback, .card img {
+    width: 30vw;
+    height: 25vw;
+    max-width: 300px;
+    max-height: 250px;
+    border-radius: 20px;
+}
+
+/* flip speed */
+
+.card {
+    transition: transform 1s;
+    transform-style: preserve-3d;
+    position: relative;
+}
+
+/* hide back of pane during swap */
+
+.front, .cardback {
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.cardback a {
+    text-align: center;
+}
+
+.card {
+    background: #fff;
+    color: none;
+    background: #fff url("../img/vortexGrey.jpg") no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.card-container, .front, .cardback {
+    box-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.5);
+    margin-bottom: 20px;
+}
+
+.card-container {
+    background: #fff url("../img/vortex.jpg") no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.card img {
+    width: 100%;
+    height: 100%;
+}
+
+.card .cardback {
+    height: 100%;
+    transform: rotateY(180deg);
+    margin: 0 auto;
+}
+
+.cardback fieldset {
+    width: 90%;
+    margin: 40px 0 0 20%;
+    width: 80%;
+    z-index: 50;
+}
+
+.cardback fieldset legend {
+    color: #a9071e;
+}
+
+.cardback fieldset li {
+    line-height: 1.1em;
+    color: #1034a6
+}
+
+.cardback a {
+    color: #0087bd
+}
+
+#gallery #gallery-slider {
+    display: none;
+}
+
+#gallery p {
+    text-align: center;
+}
+
+#gallery h3 {
+    padding-bottom: 0;
+}
+
+.carousel-indicators li, .sr-only {
+    background-color: #444444;
+}
+
+/* skills */
+
+.bar .group {
+    padding-left: 0;
+    padding-right: 2vw;
+    width: 50%;
+    float: left;
+}
+
+.bar-ul li {
+    padding: 0.2em 0;
+    line-height: 1.2em;
+}
+
+#skills-slide {
+    display: none;
+}
+
+body .b_label, body .bar_label_min, body .bar_label_max, body .b_tooltip span {
+    font-size: 16px;
+    line-height: 1.6em;
+    text-transform: uppercase;
+}
+
+.skillsright {
+    padding: 0;
+}
+
+div.bar_group__bar.thin {
+    padding-top: 10px;
+}
+
+/* #skills .row p:first-child {
+    font-size: 24px;
+} */
+
+/* .skillsright .bar-p ul {
+    font-size: 24px;
+} */
+
+/* keyframes */
+
+/* drop words */
+
+@keyframes vanish {
+    0% {
+        display: block;
+        opacity: 0;
+    }
+    5% {
+        opacity: 1;
+    }
+    10% {
+        opacity: 1;
+    }
+    15% {
+        opacity: 0;
+        display: none;
+    }
+}
+
+@media screen and (max-width:1200px) {
+    .topbar a {
+        font-size: 2.3vw;
+    }
+    .container {
+        width: 80%;
+    }
+    h3.heading {
+        font-size: 3.5vw;
+    }
+    h4, legend {
+        font-size: 2.8vw
+    }
+    h5 {
+        font-size: 2.5vw;
+    }
+    h6 {
+        font-size: 2vw;
+    }
+    p, td, a, i, fieldset, li {
+        font-size: 1.5vw;
+    }
+    .social a {
+        width: 3vw;
+        height: 3vw;
+        font-size: 2vw;
+    }
+    .social .front, .social .back {
+        width: 3vw;
+        height: 3vw;
+        transform: translateZ(1.5vw);
+    }
+    .social .back {
+        transform: rotateX(90deg) translateZ(1.5vw);
+    }
+    .dropdown .btn {
+        font-size: 3vw;
+    }
+    .aboutleft, .aboutright, #about-slide>div {
+        height: 30vw;
+    }
+    .card-container, .front, .cardback {
+        margin-bottom: 3vw;
+    }
+    .card-container, .card, .front, .back, .cardback, .card img {
+        width: 25vw;
+        height: 20vw;
+    }
+    .bar-ul li {
+        padding: 0.1em 0;
+        line-height: 1em;
+    }
+    body .b_label, body .bar_label_min, body .bar_label_max, body .b_tooltip span {
+        font-size: 1.5vw;
+    }
+    div.bar_group__bar.thin {
+        padding-top: 0.9vw;
+    }
+    .cardback fieldset {
+        margin-top: 2vw;
+    }
+}
+
+@media screen and (max-width:992px) {
+    .topbar a {
+        font-size: 2.5vw;
+    }
+    h3.heading {
+        font-size: 3.2vw;
+    }
+    h4, legend {
+        font-size: 2.6vw
+    }
+    h5 {
+        font-size: 2.3vw;
+    }
+    h6 {
+        font-size: 2vw;
+    }
+    p, td, a, i, fieldset, li {
+        font-size: 1.7vw;
+    }
+    .card-container, .card, .front, .back, .cardback, .card img {
+        width: 21vw;
+        height: 17vw;
+    }
+    td {
+        line-height: 1.2em;
+    }
+    .cardback fieldset {
+        margin-top: 0.5vw;
+    }
+    .cardback fieldset li {
+        line-height: 1em;
+    }
+}
+
+@media screen and (max-width:850px) {
+    .card-container, .card, .front, .back, .cardback, .card img {
+        width: 25vw;
+        height: 20vw;
+    }
+    .cardback fieldset li {
+        line-height: 1.2em;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .topbar a {
+        font-size: 2.7vw;
+    }
+    h1 {
+        font-size: 4.2vw;
+    }
+    h3.heading {
+        font-size: 3.4vw;
+    }
+    h4, legend {
+        font-size: 2.7vw
+    }
+    h5 {
+        font-size: 2.5vw;
+    }
+    h6 {
+        font-size: 2.1vw;
+    }
+    p, td, a, i, fieldset, li {
+        font-size: 1.9vw;
+    }
+    img {
+        width: 30vw;
+        height: 25vw;
+    }
+    .aboutleft {
+        width: 50%;
+        height: 160px;
+    }
+    .card-container, .card, .front, .back, .cardback, .card img {
+        width: 32vw;
+        height: 26vw;
+    }
+    td {
+        line-height: 1.1em;
+    }
+    .skillsright {
+        padding-left: 0.5em;
+    }
+    .cardback fieldset {
+        margin-top: 3vw;
+    }
+}
+
+@media screen and (max-width:575px) {
+    .topbar {
+        display: none;
+    }
+    h1 {
+        font-size: 5vw;
+    }
+    h3.heading {
+        font-size: 4vw;
+    }
+    h4, legend {
+        font-size: 3.6vw
+    }
+    h5 {
+        font-size: 3.4vw;
+    }
+    h6 {
+        font-size: 3.2vw;
+    }
+    p, td, a, i, fieldset, li {
+        font-size: 3vw;
+    }
+    .dropdown .btn {
+        font-size: 18px;
+    }
+    .dropdown-menu span {
+        font-size: 16px;
+    }
+    div.social {
+        width: 4vw;
+        top: -2vw;
+        line-height: 1.2em;
+    }
+    .social a {
+        width: 6vw;
+        height: 6vw;
+        font-size: 4.5vw;
+    }
+    .social .front, .social .back {
+        width: 6vw;
+        height: 6vw;
+        transform: translateZ(3vw);
+    }
+    .social .back {
+        transform: rotateX(90deg) translateZ(3vw);
+    }
+    .dropdown .btn {
+        font-size: 6vw;
+    }
+    img {
+        width: 35vw;
+        height: 35vw;
+    }
+    #about .carousel-inner, .aboutright, #about-slide>div {
+        height: 43vw;
+    }
+    .aboutleft {
+        height: 25vw;
+    }
+    .card-container, .card, .front, .back, .cardback, .card img {
+        width: 100%;
+        height: 50vw;
+     }
+     
+    #gallery .gallery-frame {
+        display: none;
+    }
+    #gallery #gallery-slider {
+        display: block;
+    }
+    #gallery-slider .carousel-inner{
+        width: 100%;
+        padding: 20px;
+    }
+    .cardback fieldset {
+        margin-top: 6vw;
+    }
+
+}
