--- a/css/style.css
+++ b/css/style.css
@@ -47,9 +47,6 @@ h4 {
     font-style: italic;
 }
 
-td a {
-    color: #1034a6;
-}
 
 h5 {
     font-size: 32;
@@ -64,20 +61,20 @@ h1, h2, h3, h4 h5, h6 {
     line-height: 1.1em;
 }
 
-p, td, a, i, li {
+p, td, a, i, li, span,input, label {
     font-size: 20px;
     line-height: 1.05em;
 }
 
 div {
-    border-radius: 20px;
+    border-radius: 10px;
     margin: 0 auto;
 }
 
 img {
     width: 100%;
     height: 20vw;
-    border-radius: 20px;
+    border-radius: 10px;
     margin: 0 auto;
 }
 
@@ -85,10 +82,23 @@ a:hover {
     text-decoration: none;
 }
 
-.container {
+body>.container {
     margin: 0 auto 5vw;
     padding: 1vw 2vw;
-    background-color: #fafae1;
+    background-color: rgba(255,255,255,0.7);
+}
+/* body>.container:nth-child(even){
+    background-color:rgba(250, 250, 225, 0.7) ;
+    background-color: rgba(240,255,240,0.7);
+} */
+#about {
+    margin-top: 5vw;
+}
+body{
+    background: url("../img/desk.jpeg") no-repeat center/cover fixed;
+}
+a{
+    color: #000;
 }
 
 /* #about {
@@ -179,6 +189,7 @@ a:hover {
     height: 51vw;
     margin: 0 auto;
     width: 100%;
+    border-radius: 0;
 }
 
 h1 {
@@ -356,7 +367,7 @@ img {
     width: 25vw;
     max-height: 250px;
     max-width: 250px;
-    border-radius: 20px;
+    border-radius: 10px;
 }
 
 #about .carousel-inner {
@@ -377,7 +388,7 @@ td {
     color: #fff;
 }
 
-.about-info tr a:hover {
+a:hover {
     color: #ff9900;
 }
 
@@ -393,6 +404,8 @@ td {
 
 #about .carousel-item p {
     border-bottom: #2f2f2f 1px dotted;
+    line-height: 1.1em;
+    margin-bottom: 0.3em;
 }
 
 .about-info tr:last-child td {
@@ -404,10 +417,12 @@ td {
     background-color: #1034a6;
     border-radius: 5px;
 }
-
-.about-slide .carousel-inner a:hover {
-    color: #ff9900;
+.about-info tr:last-child td a:hover{
+    color: #f90;
 }
+/* .about-slide .carousel-inner a:hover {
+    color: #ff9900;
+} */
 
 .aboutright, #about-slide>div {
     height: 350px;
@@ -450,7 +465,7 @@ td {
     height: 25vw;
     max-width: 300px;
     max-height: 250px;
-    border-radius: 20px;
+    border-radius: 10px;
 }
 
 /* flip speed */
@@ -628,6 +643,204 @@ div.bar_group__bar.thin {
     border-radius: 10px;
 }
 
+#edu-slider{
+    display: none;
+}
+
+/*-- Technical-Skills-section --*/
+
+#stats {
+ 
+/*  background: url(../img/stats.jpg) no-repeat center/cover fixed; */
+
+ overflow: hidden;
+ text-align: center;
+}
+
+.count-grid span {
+    background: #ff9900;
+    display: block;
+    width: 60px;
+    height: 2px;
+    margin: 0 auto;
+    transform: rotate(90deg);
+    position: absolute;
+    left: 40%;
+    bottom: 40%;
+}
+.count-grid h6{
+    position: relative;
+    margin-top: 50%;
+}
+
+
+.numscroller {
+    font-size: 60px;
+    color: #333;
+    padding: 0.3em 0;
+    position: relative;
+    font-family: 'PT Sans', sans-serif;
+}
+
+
+.count-grid {
+    padding: 0 40px;
+}
+
+/* Contact */
+iframe {
+    width: 100%;
+    height: 400px;
+    border: none;
+    
+}
+
+ .contact input[type="text"],.contact input[type="email"],.contact textarea,.contact input[type="tel"]{
+    color: #8c8c8c;
+    padding: 0.5em 1em 0.5em 0;
+    border: 0;
+    width: 95%;
+    border-bottom: 1px solid #929292;
+    background: none;
+    -webkit-appearance: none;
+	outline: none;
+}
+input[type="checkbox"] {
+    cursor: pointer;
+}
+.contact textarea { 
+	min-height: 150px;
+    resize: none;
+}
+/*-- input-effect --*/
+.styled-input.input-top {
+    margin-top: 0;
+} 
+.styled-input input:focus ~ label, .styled-input input:valid ~ label,.styled-input textarea:focus ~ label ,.styled-input textarea:valid ~ label{
+    font-size: .9em;
+    color: #333333;
+    top: -1.3em;
+    transition: all 0.125s;
+}
+.styled-input {
+	width: 100%;
+    position: relative;
+    margin: 0 0 0.8em;
+}
+.styled-input:nth-child(1),.styled-input:nth-child(3){
+	margin-left:0;
+}
+.textarea-grid{
+	float:none !important;
+	width:100% !important;
+	margin-left:0 !important;
+}
+.styled-input label {
+	color: #000;
+    padding: 0.5em .9em 0.5em 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all 0.3s;
+    pointer-events: none;
+    font-weight: 400;
+    display: block;
+    line-height: 1em;
+}
+.styled-input input ~ span,.styled-input textarea ~ span {
+	display: block;
+    width: 0;
+    height: 2px;
+    background: #333;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: all 0.125s;
+}
+.styled-input textarea ~ span { 
+    bottom: 5px; 
+}
+.styled-input input:focus.styled-input textarea:focus { 
+	outline: 0; 
+} 
+.styled-input input:focus ~ span,.styled-input textarea:focus ~ span {
+	width: 100%;
+	-webkit-transition: all 0.075s;
+	-moz-transition: all 0.075s;  
+	transition: all 0.075s; 
+} 
+/*-- //input-effect --*/
+.contact input[type="submit"] {
+    color: #FFFFFF;
+    padding: .5em 2em;
+    background: #ff9900;
+    text-decoration: none;
+    text-align: center;
+    letter-spacing: 2px;
+    border: none;
+}
+.contact input[type="submit"]:hover {
+    background: #146eb4;
+}
+.contact-right {
+    padding-left: 1em;
+    float: left;
+    padding-top: 0.5em;
+}
+.contact-right p{
+    font-weight: 500;
+    line-height: 1.2em;
+}
+.contact form>div{
+    padding:1em 1em 0;
+}
+
+.layouts i {
+
+    vertical-align: middle;
+    padding: 0.4em .4em 0.4em 0em;
+    float: left;
+}
+.layouts {
+    margin-bottom: 2em;
+}
+.layouts:nth-child(4) {
+    margin-bottom: 0em;
+}
+
+form input:last-child{
+    position: relative;
+    left: 6%;
+}
+/* //Contact */
+/* footer */
+.footer.container{
+    color: #fff;
+    text-align: center;
+    width: 100%;
+    max-width: 100%;
+    border-top: #000 2px dotted;
+    border-radius: 0;
+    margin:0 auto;
+    padding: 0;
+    background-color: #555;
+}
+.footer .social {
+    position: relative;
+    left: 0;
+    top:-5px;
+
+}
+.footer h3{
+    padding: 0;
+    margin: 0.2em;
+
+    
+}
+.footer h3 a{
+    color: #fff;
+}
+/* //footer */
 /* keyframes */
 
 /* drop words */
@@ -673,7 +886,7 @@ div.bar_group__bar.thin {
     h6 {
         font-size: 1.7vw;
     }
-    p, td, a, i, li {
+    p, td, a, i, li, span,input, label {
         font-size: 1.5vw;
     }
     .social a {
@@ -724,6 +937,27 @@ div.bar_group__bar.thin {
         margin: 1.5vw 1.5vw;
         height: 20vw;
     }
+
+    .count-grid span {
+        width: 3vw;
+        bottom: 50%;
+    }
+    .count-grid h6{
+        margin-top: 40%;
+    }
+    
+    
+    .numscroller {
+        font-size: 3vw;
+    }
+    
+    
+    .count-grid {
+        padding: 0 2vw;
+    }
+    .footer .social {
+        top: -1em;
+    }
 }
 
 @media screen and (max-width:992px) {
@@ -747,7 +981,7 @@ div.bar_group__bar.thin {
     h6 {
         font-size: 1.9vw;
     }
-    p, td, a, i, li {
+    p, td, a, i, li, span,input, label {
         font-size: 1.7vw;
     }
     .card-container, .card, .front, .back, .cardback, .card img {
@@ -805,7 +1039,7 @@ div.bar_group__bar.thin {
     h6 {
         font-size: 2.1vw;
     }
-    p, td, a, i, li {
+    p, td, a, i, li, span,input, label {
         font-size: 1.9vw;
     }
     img {
@@ -858,7 +1092,7 @@ div.bar_group__bar.thin {
     h6 {
         font-size: 3.2vw;
     }
-    p, td, a, i, li {
+    p, td, a, i, li, span,input, label {
         font-size: 3vw;
     }
     .dropdown .btn {
@@ -955,5 +1189,11 @@ div.bar_group__bar.thin {
     #edu-slider {
         display: block;
         width: 95%;
+    }
+    .count-grid span {
+        bottom: 60%;
+    }
+    .footer>div.social{
+        width: 100%;;
     }
 }
