--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,6 @@ h4 {
     font-style: italic;
 }
 
-
 h5 {
     font-size: 32;
 }
@@ -61,7 +60,7 @@ h1, h2, h3, h4 h5, h6 {
     line-height: 1.1em;
 }
 
-p, td, a, i, li, span,input, label {
+p, td, a, i, li, span, input, label:not(.topbar>a>span) {
     font-size: 20px;
     line-height: 1.05em;
 }
@@ -85,19 +84,23 @@ a:hover {
 body>.container {
     margin: 0 auto 5vw;
     padding: 1vw 2vw;
-    background-color: rgba(250,250,225,0.8);
+    background-color: rgba(255, 255, 255, 0.8);
 }
+
 /* body>.container:nth-child(even){
     background-color:rgba(250, 250, 225, 0.7) ;
     background-color: rgba(240,255,240,0.7);
 } */
+
 #about {
     margin-top: 5vw;
 }
-body{
+
+body {
     background: url("../img/desk.jpeg") no-repeat center/cover fixed;
 }
-a{
+
+a {
     color: #000;
 }
 
@@ -417,9 +420,11 @@ a:hover {
     background-color: #1034a6;
     border-radius: 5px;
 }
-.about-info tr:last-child td a:hover{
+
+.about-info tr:last-child td a:hover {
     color: #f90;
 }
+
 /* .about-slide .carousel-inner a:hover {
     color: #ff9900;
 } */
@@ -643,18 +648,16 @@ div.bar_group__bar.thin {
     border-radius: 10px;
 }
 
-#edu-slider{
+#edu-slider {
     display: none;
 }
 
 /*-- Technical-Skills-section --*/
 
 #stats {
- 
-/*  background: url(../img/stats.jpg) no-repeat center/cover fixed; */
-
- overflow: hidden;
- text-align: center;
+    /*  background: url(../img/stats.jpg) no-repeat center/cover fixed; */
+    overflow: hidden;
+    text-align: center;
 }
 
 .count-grid span {
@@ -668,11 +671,11 @@ div.bar_group__bar.thin {
     left: 40%;
     bottom: 40%;
 }
-.count-grid h6{
+
+.count-grid h6 {
     position: relative;
     margin-top: 50%;
 }
-
 
 .numscroller {
     font-size: 60px;
@@ -682,20 +685,19 @@ div.bar_group__bar.thin {
     font-family: 'PT Sans', sans-serif;
 }
 
-
 .count-grid {
     padding: 0 40px;
 }
 
 /* Contact */
+
 iframe {
     width: 100%;
     height: 400px;
     border: none;
-    
 }
 
- .contact input[type="text"],.contact input[type="email"],.contact textarea,.contact input[type="tel"]{
+.contact input[type="text"], .contact input[type="email"], .contact textarea, .contact input[type="tel"] {
     color: #8c8c8c;
     padding: 0.5em 1em 0.5em 0;
     border: 0;
@@ -703,40 +705,49 @@ iframe {
     border-bottom: 1px solid #929292;
     background: none;
     -webkit-appearance: none;
-	outline: none;
+    outline: none;
 }
+
 input[type="checkbox"] {
     cursor: pointer;
 }
-.contact textarea { 
-	min-height: 150px;
+
+.contact textarea {
+    min-height: 150px;
     resize: none;
 }
+
 /*-- input-effect --*/
+
 .styled-input.input-top {
     margin-top: 0;
-} 
-.styled-input input:focus ~ label, .styled-input input:valid ~ label,.styled-input textarea:focus ~ label ,.styled-input textarea:valid ~ label{
+}
+
+.styled-input input:focus~label, .styled-input input:valid~label, .styled-input textarea:focus~label, .styled-input textarea:valid~label {
     font-size: .9em;
     color: #333333;
     top: -1.3em;
     transition: all 0.125s;
 }
+
 .styled-input {
-	width: 100%;
+    width: 100%;
     position: relative;
     margin: 0 0 0.8em;
 }
-.styled-input:nth-child(1),.styled-input:nth-child(3){
-	margin-left:0;
+
+.styled-input:nth-child(1), .styled-input:nth-child(3) {
+    margin-left: 0;
 }
-.textarea-grid{
-	float:none !important;
-	width:100% !important;
-	margin-left:0 !important;
+
+.textarea-grid {
+    float: none !important;
+    width: 100% !important;
+    margin-left: 0 !important;
 }
+
 .styled-input label {
-	color: #000;
+    color: #000;
     padding: 0.5em .9em 0.5em 0;
     position: absolute;
     top: 0;
@@ -747,8 +758,9 @@ input[type="checkbox"] {
     display: block;
     line-height: 1em;
 }
-.styled-input input ~ span,.styled-input textarea ~ span {
-	display: block;
+
+.styled-input input~span, .styled-input textarea~span {
+    display: block;
     width: 0;
     height: 2px;
     background: #333;
@@ -757,19 +769,24 @@ input[type="checkbox"] {
     left: 0;
     transition: all 0.125s;
 }
-.styled-input textarea ~ span { 
-    bottom: 5px; 
+
+.styled-input textarea~span {
+    bottom: 5px;
 }
-.styled-input input:focus.styled-input textarea:focus { 
-	outline: 0; 
-} 
-.styled-input input:focus ~ span,.styled-input textarea:focus ~ span {
-	width: 100%;
-	-webkit-transition: all 0.075s;
-	-moz-transition: all 0.075s;  
-	transition: all 0.075s; 
-} 
+
+.styled-input input:focus.styled-input textarea:focus {
+    outline: 0;
+}
+
+.styled-input input:focus~span, .styled-input textarea:focus~span {
+    width: 100%;
+    -webkit-transition: all 0.075s;
+    -moz-transition: all 0.075s;
+    transition: all 0.075s;
+}
+
 /*-- //input-effect --*/
+
 .contact input[type="submit"] {
     color: #FFFFFF;
     padding: .5em 2em;
@@ -779,68 +796,78 @@ input[type="checkbox"] {
     letter-spacing: 2px;
     border: none;
 }
+
 .contact input[type="submit"]:hover {
     background: #146eb4;
 }
+
 .contact-right {
     padding-left: 1em;
     float: left;
     padding-top: 0.5em;
 }
-.contact-right p{
+
+.contact-right p {
     font-weight: 500;
     line-height: 1.2em;
 }
-.contact form>div{
-    padding:1em 1em 0;
+
+.contact form>div {
+    padding: 1em 1em 0;
 }
 
 .layouts i {
-
     vertical-align: middle;
     padding: 0.4em .4em 0.4em 0em;
     float: left;
 }
+
 .layouts {
     margin-bottom: 2em;
 }
+
 .layouts:nth-child(4) {
     margin-bottom: 0em;
 }
 
-form input:last-child{
+form input:last-child {
     position: relative;
     left: 6%;
 }
+
 /* //Contact */
+
 /* footer */
-.footer.container{
+
+.footer.container {
     color: #fff;
     text-align: center;
     width: 100%;
     max-width: 100%;
     border-top: #000 2px dotted;
     border-radius: 0;
-    margin:0 auto;
+    margin: 0 auto;
     padding: 0;
     background-color: #999;
 }
+
 .footer .social {
     position: relative;
     left: 0;
-    top:-5px;
-
+    top: -5px;
 }
-.footer h3{
+
+.footer h3 {
     padding: 0;
     margin: 0.2em;
-
-    
 }
-.footer h3 a{
+
+.footer h3 a {
     color: #fff;
 }
+
 /* //footer */
+
 /* keyframes */
 
 /* drop words */
@@ -863,9 +890,6 @@ form input:last-child{
 }
 
 @media screen and (max-width:1200px) {
-    .topbar a {
-        font-size: 2.3vw;
-    }
     .container {
         width: 80%;
     }
@@ -886,8 +910,11 @@ form input:last-child{
     h6 {
         font-size: 1.7vw;
     }
-    p, td, a, i, li, span,input, label {
+    p, td, a, i, li, span, input, label:not(.topbar>a>span) {
         font-size: 1.5vw;
+    }
+    .topbar a {
+        font-size: 2.3vw;
     }
     .social a {
         width: 4vw;
@@ -928,7 +955,7 @@ form input:last-child{
     .cardback {
         padding-top: 2vw;
     }
-/*     #experience .row>div {
+    /*     #experience .row>div {
         padding: 0;
     } */
     .grid {
@@ -937,21 +964,16 @@ form input:last-child{
         margin: 1.5vw 1.5vw;
         height: 20vw;
     }
-
     .count-grid span {
         width: 3vw;
         bottom: 50%;
     }
-    .count-grid h6{
+    .count-grid h6 {
         margin-top: 40%;
     }
-    
-    
     .numscroller {
         font-size: 3vw;
     }
-    
-    
     .count-grid {
         padding: 0 2vw;
     }
@@ -961,9 +983,6 @@ form input:last-child{
 }
 
 @media screen and (max-width:992px) {
-    .topbar a {
-        font-size: 2.5vw;
-    }
     h3.heading {
         font-size: 3vw;
     }
@@ -981,8 +1000,11 @@ form input:last-child{
     h6 {
         font-size: 1.9vw;
     }
-    p, td, a, i, li, span,input, label {
+    p, td, a, i, li, span, input, label:not(.topbar>a>span) {
         font-size: 1.7vw;
+    }
+    .topbar a {
+        font-size: 2.5vw;
     }
     .card-container, .card, .front, .back, .cardback, .card img {
         width: 21vw;
@@ -1016,9 +1038,6 @@ form input:last-child{
 }
 
 @media screen and (max-width:767px) {
-    .topbar a {
-        font-size: 2.7vw;
-    }
     h1 {
         font-size: 4.2vw;
     }
@@ -1039,8 +1058,11 @@ form input:last-child{
     h6 {
         font-size: 2.1vw;
     }
-    p, td, a, i, li, span,input, label {
+    p, td, a, i, li, span, input, label:not(.topbar>a>span) {
         font-size: 1.9vw;
+    }
+    .topbar a {
+        font-size: 2.7vw;
     }
     img {
         width: 30vw;
@@ -1069,9 +1091,6 @@ form input:last-child{
 }
 
 @media screen and (max-width:575px) {
-    .topbar {
-        display: none;
-    }
     h1 {
         font-size: 5vw;
     }
@@ -1092,8 +1111,11 @@ form input:last-child{
     h6 {
         font-size: 3.2vw;
     }
-    p, td, a, i, li, span,input, label {
+    p, td, a, i, li, span, input, label:not(.topbar>a>span) {
         font-size: 3vw;
+    }
+    .topbar {
+        display: none;
     }
     .dropdown .btn {
         font-size: 18px;
@@ -1193,7 +1215,8 @@ form input:last-child{
     .count-grid span {
         bottom: 60%;
     }
-    .footer>div.social{
-        width: 100%;;
+    .footer>div.social {
+        width: 100%;
+        ;
     }
 }
